devtools/client/themes/rules.css
/* ... */
.
ruleview
-
computedlist
{
list
-
style
:
none
;
padding
:
0
;
}
.
ruleview
-
overridden
-
items
{
margin
-
inline
-
start
:
-
25px
;
list
-
style
:
none
;
line
-
height
:
1
.
5em
;
}
.
ruleview
-
overridden
-
item
{
position
:
relative
;
}
.
ruleview
-
overridden
-
item
:
:
before
{
position
:
absolute
;
left
:
-
15px
;
top
:
0px
;
content
:
'
'
;
display
:
block
;
border
-
left
:
0
.
5px
solid
var
(
-
-
rule
-
overridden
-
item
-
border
-
color
)
;
height
:
0
.
8em
;
border
-
bottom
:
0
.
5px
solid
var
(
-
-
rule
-
overridden
-
item
-
border
-
color
)
;
width
:
10px
;
}
.
ruleview
-
overridden
-
item
:
:
after
{
position
:
absolute
;
left
:
-
15px
;
bottom
:
-
7px
;
content
:
'
'
;
display
:
block
;
border
-
left
:
0
.
5px
solid
var
(
-
-
rule
-
overridden
-
item
-
border
-
color
)
;
height
:
100
%
;
}
.
ruleview
-
overridden
-
item
:
last
-
child
:
after
{
display
:
none
;
}
.
ruleview
-
flex
.
ruleview
-
grid
.
ruleview
-
swatch
{
cursor
:
pointer
;
border
-
radius
:
50
%
;
width
:
1em
;
height
:
1em
;
vertical
-
align
:
middle
;
/
*
align
the
swatch
with
its
value
*
/
margin
-
top
:
-
1px
;
margin
-
inline
-
end
:
5px
;
display
:
inline
-
block
;
position
:
relative
;
}
.
ruleview
-
flex
{
background
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
command
-
frames
.
svg
"
)
;
-
moz
-
context
-
properties
:
fill
;
fill
:
var
(
-
-
rule
-
flex
-
toggle
-
color
)
;
border
-
radius
:
0
;
background
-
size
:
1em
;
}
.
ruleview
-
grid
{
background
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
grid
.
svg
"
)
;
border
-
radius
:
0
;
}
.
ruleview
-
shape
-
point
.
active
.
ruleview
-
shapeswatch
.
active
+
.
ruleview
-
shape
>
.
ruleview
-
shape
-
point
:
hover
{
background
-
color
:
var
(
-
-
rule
-
highlight
-
background
-
color
)
;
}
.
ruleview
-
colorswatch
:
:
before
{
content
:
'
'
;
background
-
color
:
#
eee
;
background
-
image
:
linear
-
gradient
(
45deg
#
ccc
25
%
transparent
25
%
transparent
75
%
#
ccc
75
%
#
ccc
)
linear
-
gradient
(
45deg
#
ccc
25
%
transparent
25
%
transparent
75
%
#
ccc
75
%
#
ccc
)
;
background
-
size
:
12px
12px
;
background
-
position
:
0
0
6px
6px
;
position
:
absolute
;
border
-
radius
:
50
%
;
top
:
0
;
left
:
0
;
right
:
0
;
bottom
:
0
;
z
-
index
:
-
1
;
}
.
ruleview
-
bezierswatch
{
background
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
cubic
-
bezier
-
swatch
.
png
"
)
;
background
-
size
:
1em
;
}
.
ruleview
-
filterswatch
{
background
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
filter
-
swatch
.
svg
"
)
;
background
-
size
:
1em
;
}
.
ruleview
-
angleswatch
{
background
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
angle
-
swatch
.
svg
"
)
;
background
-
size
:
1em
;
}
.
ruleview
-
shapeswatch
{
background
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
shape
-
swatch
.
svg
"
)
;
-
moz
-
context
-
properties
:
stroke
;
stroke
:
var
(
-
-
rule
-
shape
-
toggle
-
color
)
;
border
-
radius
:
0
;
background
-
size
:
110
%
110
%
;
box
-
shadow
:
none
;
width
:
1
.
45em
;
height
:
1
.
45em
;
}
media
(
min
-
resolution
:
1
.
1dppx
)
{
.
ruleview
-
bezierswatch
{
background
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
cubic
-
bezier
-
swatch
2x
.
png
"
)
;
background
-
size
:
1em
;
}
}
.
ruleview
-
overridden
{
text
-
decoration
:
line
-
through
;
}
/
*
*
*
Hide
swatches
(
tool
icons
)
from
properties
that
are
overwritten
by
higher
specificity
*
rules
.
*
.
ruleview
-
swatch
is
a
base
class
for
many
tool
swatches
(
shapes
color
bezier
curves
)
*
.
ruleview
-
flex
and
.
ruleview
-
grid
are
custom
*
/
.
ruleview
-
overridden
.
ruleview
-
flex
.
ruleview
-
overridden
.
ruleview
-
grid
.
ruleview
-
overridden
.
ruleview
-
swatch
{
display
:
none
;
}
.
theme
-
light
.
ruleview
-
overridden
{
text
-
decoration
-
color
:
var
(
-
-
theme
-
content
-
color3
)
;
}
.
ruleview
-
font
-
family
.
used
-
font
{
text
-
decoration
:
underline
;
}
.
styleinspector
-
propertyeditor
{
border
:
1px
solid
#
CCC
;
padding
:
0
;
margin
:
-
1px
-
3px
-
1px
-
1px
;
}
.
ruleview
-
property
{
border
-
left
:
3px
solid
transparent
;
clear
:
both
;
padding
-
left
:
28px
;
}
.
ruleview
-
propertycontainer
>
*
{
vertical
-
align
:
middle
;
}
.
ruleview
-
property
[
dirty
]
{
border
-
left
-
color
:
var
(
-
-
theme
-
highlight
-
green
)
;
}
.
ruleview
-
highlight
>
.
ruleview
-
expander
.
ruleview
-
highlight
>
.
ruleview
-
namecontainer
.
ruleview
-
highlight
>
.
ruleview
-
propertyvaluecontainer
.
ruleview
-
highlight
>
.
ruleview
-
rule
-
source
-
label
.
ruleview
-
highlight
>
.
ruleview
-
selector
{
background
-
color
:
var
(
-
-
rule
-
highlight
-
background
-
color
)
;
}
.
ruleview
-
namecontainer
>
.
ruleview
-
propertyname
.
ruleview
-
propertyvaluecontainer
>
.
ruleview
-
propertyvalue
{
border
-
bottom
:
1px
dashed
transparent
;
}
.
ruleview
-
namecontainer
:
hover
>
.
ruleview
-
propertyname
.
ruleview
-
propertyvaluecontainer
:
hover
>
.
ruleview
-
propertyvalue
{
border
-
bottom
-
color
:
hsl
(
0
0
%
50
%
)
;
}
.
ruleview
-
selectorcontainer
{
word
-
wrap
:
break
-
word
;
cursor
:
text
;
}
.
ruleview
-
selector
-
separator
.
ruleview
-
selector
-
unmatched
.
ruleview
-
unmatched
-
variable
{
color
:
#
888
;
}
.
ruleview
-
selector
-
matched
>
.
ruleview
-
selector
-
attribute
{
/
*
TODO
:
Bug
1178535
Awaiting
UX
feedback
on
highlight
colors
*
/
}
.
ruleview
-
selector
-
matched
>
.
ruleview
-
selector
-
pseudo
-
class
{
/
*
TODO
:
Bug
1178535
Awaiting
UX
feedback
on
highlight
colors
*
/
}
.
ruleview
-
selector
-
matched
>
.
ruleview
-
selector
-
pseudo
-
class
-
lock
{
font
-
weight
:
bold
;
color
:
var
(
-
-
theme
-
highlight
-
orange
)
;
}
.
ruleview
-
selectorhighlighter
{
background
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
vview
-
open
-
inspector
.
png
"
)
no
-
repeat
0
0
;
padding
-
left
:
16px
;
margin
-
left
:
5px
;
cursor
:
pointer
;
}
.
ruleview
-
selectorhighlighter
:
hover
{
filter
:
var
(
-
-
theme
-
icon
-
checked
-
filter
)
;
}
/* ... */

