Bug 1487177 - Fix rule view overridden item alignment. r=bgrins
UltraBlame original commit: 14677ccf804ec001e435119cb2b29ea7d88b994f

--- a/devtools/client/themes/rules.css
+++ b/devtools/client/themes/rules.css
@@ -2250,6 +2250,24 @@ none
 .
 ruleview
 -
+overridden
+-
+item
+.
+ruleview
+-
+namecontainer
+{
+margin
+-
+left
+:
+0
+;
+}
+.
+ruleview
+-
 flex
 .
 ruleview
